<resources>
	<string name="app_name">mobileFit</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">Android Studio</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>

	<string name="menu_home">Home</string>
	<string name="menu_gallery">Gallery</string>
	<string name="menu_slideshow">Slideshow</string>
	<string name="menu_exercises">Exercises</string>
	<string name="menu_diet">Diets</string>
	<string name="menu_calories">Calories Calculator</string>
	<string name="menu_trainings">Training Plans</string>
	<string name="menu_stopper">Stopper</string>
	<string name="menu_daily">Daily Quests</string>

	<string name="home_second">Home Second</string>
	<string name="next">Next</string>
	<string name="previous">Previous</string>
	<string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
	<string name="hello_gallery_second">Hello HomeSecondFragment. Arg: %1$s</string>
	<string name="hello_slideshow_second">Hello HomeSecondFragment. Arg: %1$s</string>
	<string name="title_activity_login">Sign in</string>
	<string name="title_activity_register">Register</string>
	<string name="prompt_email">Email</string>
	<string name="prompt_password">Password</string>
	<string name="action_sign_in">Sign in or register</string>
	<string name="action_sign_in_short">Sign in</string>
	<string name="welcome">"Welcome !"</string>
	<string name="invalid_username">Not a valid username</string>
	<string name="invalid_password">Password must be >5 characters</string>
	<string name="login_failed">"Login failed"</string>
	<string name="register">Register</string>
	<string name="username">Username</string>
	<string name="prompt_validate_password">Validate password</string>
	<string name="error_blank">This field can\'t be blank</string>
	<string name="error_too_short">Must be >%s characters</string>
	<string name="error_email_already_used">This email is already used</string>
	<string name="error_invalid_email">Invalid email</string>
	<string name="error_password_mismatch">Passwords mismatch</string>
	<string name="error_unknown">Unknown error</string>
	<string name="weight_new_measurement">New measurement</string>

	<string name="exercises_category">Categories</string>
	<string name="trainingplans">Training Plans</string>
	<string name="diets">Diets</string>
	<string name="stopper">Stopper</string>
	<string name="foodg">g of</string>
	<string name="choosefood">(choose food)</string>
	<string name="cal">cal</string>
	<string name="calories_textView">Calories Calculator</string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
