<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
			xmlns:app="http://schemas.android.com/apk/res-auto"
			xmlns:tools="http://schemas.android.com/tools"
			android:id="@+id/mobile_navigation"
			app:startDestination="@+id/nav_home">

	<fragment
			android:id="@+id/nav_home"
			android:name="com.mobilefit.ui.home.HomeFragment"
			android:label="@string/menu_home"
			tools:layout="@layout/fragment_home">

		<action
				android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
				app:destination="@id/nav_home_second"/>
	</fragment>
	<fragment
			android:id="@+id/nav_home_second"
			android:name="com.mobilefit.ui.home.HomeSecondFragment"
			android:label="@string/home_second"
			tools:layout="@layout/fragment_home_second">
		<action
				android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
				app:destination="@id/nav_home"/>

		<argument
				android:name="myArg"
				app:argType="string"/>
	</fragment>

	<fragment
			android:id="@+id/nav_weight"
			android:name="com.mobilefit.ui.weight.WeightFragment"
			android:label="@string/menu_gallery"
			tools:layout="@layout/fragment_weight">
		<action
				android:id="@+id/action_WeightFragment_to_WeightMeasurementFragment"
				app:destination="@+id/nav_weight_measurement"/>
	</fragment>
	<fragment
			android:id="@+id/nav_weight_measurement"
			android:name="com.mobilefit.ui.weight.WeightMeasurementFragment"
			android:label="Weight Measurement"
			tools:layout="@layout/weight_measurement_fragment">
		<action
			android:id="@+id/action_WeightMeasuremntFragment_to_WeightFragment"
			app:destination="@id/nav_weight"/>
	</fragment>

	<fragment
			android:id="@+id/nav_slideshow"
			android:name="com.mobilefit.ui.slideshow.SlideshowFragment"
			android:label="@string/menu_slideshow"
			tools:layout="@layout/fragment_slideshow"/>

	<fragment
			android:id="@+id/nav_exercises"
			android:name="com.mobilefit.ui.exercises.ExercisesFragment"
			android:label="@string/menu_exercises"
			tools:layout="@layout/fragment_exercises"/>

	<fragment
			android:id="@+id/nav_exercises2"
			android:name="com.mobilefit.ui.exercises.ExercisesFragment"
			android:label="@string/menu_exercises"
			tools:layout="@layout/exercise_list" />
	<fragment
			android:id="@+id/nav_diet"
			android:name="com.mobilefit.ui.diet.DietFragment"
			android:label="@string/menu_diet"
			tools:layout="@layout/fragment_diet"/>

	<fragment
			android:id="@+id/nav_calories"
			android:name="com.mobilefit.ui.calories.CaloriesFragment"
			android:label="@string/menu_calories"
			tools:layout="@layout/fragment_calories"/>

	<fragment
		android:id="@+id/nav_trainingplans"
		android:name="com.mobilefit.ui.training.TrainingFragment"
		android:label="@string/menu_trainings"
		tools:layout="@layout/fragment_training"/>

	<fragment
			android:id="@+id/nav_stopper"
			android:name="com.mobilefit.ui.stopper.StopperFragment"
			android:label="@string/menu_stopper"
			tools:layout="@layout/fragment_stopper"/>

</navigation>