<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".ui.register.RegisterActivity" android:background="@color/background"
		android:padding="4sp">

	<EditText
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:inputType="textPassword"
			android:ems="10"
			android:id="@+id/tv_password"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="24dp" android:layout_marginTop="24dp"
			app:layout_constraintTop_toBottomOf="@+id/tv_email" android:hint="@string/prompt_password"
			android:textColor="@color/textColor" android:textColorHint="@color/hintColor"
			android:background="@color/colorAccent" android:padding="8sp"/>
	<EditText
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:inputType="textPassword"
			android:ems="10"
			android:id="@+id/tv_validatePassword" android:layout_marginTop="24dp"
			app:layout_constraintTop_toBottomOf="@+id/tv_password" app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="24dp" android:hint="@string/prompt_validate_password"
			android:textColor="@color/textColor" android:textColorHint="@color/hintColor"
			android:background="@color/colorAccent" android:padding="8sp"/>
	<EditText
			android:id="@+id/tv_email"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="24dp"
			android:layout_marginTop="24dp"
			android:layout_marginEnd="24dp"
			android:background="@color/colorAccent" android:ems="10"
			android:hint="@string/prompt_email" android:inputType="textEmailAddress" android:padding="8sp"
			android:textColor="@color/textColor" android:textColorHint="@color/hintColor"
			app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"/>
	<Button
			android:text="@string/register"
			android:layout_width="0dp"
			android:layout_height="wrap_content" android:id="@+id/btn_register"
			android:layout_marginTop="24dp"
			app:layout_constraintTop_toBottomOf="@+id/tv_validatePassword" app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="24dp" android:textColor="@color/textColor"
			android:textColorHint="@color/textColor" android:background="@color/colorPrimary"
			android:onClick="register"/>
</androidx.constraintlayout.widget.ConstraintLayout>