<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/background">

	<TextView
			android:id="@+id/textView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:text="@string/calories_textView"
			android:textColor="@color/textColor"
			android:textSize="20sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

	<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/calories_recyclerView"
			android:layout_width="409dp"
			android:layout_height="350dp"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@+id/textView6"
			tools:layout_editor_absoluteX="1dp" />

	<EditText
			android:id="@+id/cal_input"
			android:layout_width="74dp"
			android:layout_height="41dp"
			android:layout_marginStart="32dp"
			android:layout_marginTop="12dp"
			android:background="@color/colorAccent"
			android:ems="10"
			android:inputType="number|textPersonName"
			android:textColor="@color/textColor"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView" />

	<TextView
			android:id="@+id/textView3"
			android:layout_width="38dp"
			android:layout_height="56dp"
			android:layout_marginTop="20dp"
			android:text="@string/foodg"
			android:textColor="@color/textColor"
			android:textSize="20sp"
			app:layout_constraintEnd_toStartOf="@+id/chooseFood_textView"
			app:layout_constraintHorizontal_bias="0.228"
			app:layout_constraintStart_toEndOf="@+id/cal_input"
			app:layout_constraintTop_toBottomOf="@+id/textView" />

	<TextView
			android:id="@+id/chooseFood_textView"
			android:layout_width="228dp"
			android:layout_height="55dp"
			android:layout_marginTop="20dp"
			android:layout_marginEnd="36dp"
			android:text="@string/choosefood"
			android:textColor="@color/textColor"
			android:textSize="20sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView" />

	<TextView
			android:id="@+id/cal_textView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="0"
			android:textColor="@color/textColor"
			android:textSize="25sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.408"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/chooseFood_textView" />

	<TextView
			android:id="@+id/textView6"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/cal"
			android:textColor="@color/textColor"
			android:textSize="25sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.068"
			app:layout_constraintStart_toEndOf="@+id/cal_textView"
			app:layout_constraintTop_toBottomOf="@+id/chooseFood_textView" />
</androidx.constraintlayout.widget.ConstraintLayout>